# K8s-tutorial-milvus

./: README.md  getting_started.ipynb  getting_started.py  milvus_helm.yaml  pyproject.toml
